--- a/src/file-upload/file-upload.module.css
+++ b/src/file-upload/file-upload.module.css
@@ -27,7 +27,12 @@
 
 .plus-icon {
   font-size: 48px;
-  color: #ccc;
+  color: #fff;
+  background-color: #ccc;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  margin: auto;
 }
 
 .upload-text {
@@ -46,7 +51,12 @@
   justify-content: space-between;
 }
 
-.cropped-image-container img {
-  max-width: 100%;
-  max-height: 100%;
+.cropped-image-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 8px;
+}
+.cropped-image-container > img {
+  object-fit: cover;
 }
