temp: storybook setting

--- a/src/alert/alert.module.css
+++ b/src/alert/alert.module.css
@@ -14,6 +14,10 @@
   overflow: hidden;
 }
 
+.popup-container.popup-storybook {
+  position: relative;
+}
+
 .popup-container {
   position: fixed;
   top: 0;
