--- a/src/button/button.module.css
+++ b/src/button/button.module.css
@@ -1,30 +1,54 @@
 .button {
-  font-weight: 700;
-  border: 0;
-  border-radius: 3em;
   cursor: pointer;
   display: inline-block;
   line-height: 1;
   color: #333;
 }
-.button--primary {
+/** variant: dark  */
+.dark {
   color: white;
   background-color: #000000;
 }
-.button--secondary {
+/** variant: light  */
+.light {
   color: white;
   background-color: #464646;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
 }
-.button--small {
-  font-size: 12px;
-  padding: 10px 16px;
+.light:disabled {
+  color: #aaaaaa;
+  border-color: #aaaaaa;
+  background-color: #e5e5e5;
 }
-.button--medium {
+/** variant: light  */
+.primary {
+  color: #e1e9ff;
+  background-color: #5f88f3;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+}
+.ghost {
+  color: inherit;
+  background-color: inherit;
+}
+.small {
+  font-size: 12px;
+  padding: 15px 25px;
+}
+.medium {
   font-size: 14px;
   padding: 11px 20px;
 }
-.button--large {
+.large {
   font-size: 16px;
   padding: 12px 24px;
+}
+
+.button.rounded-small {
+  border-radius: 10px;
+}
+
+.button:disabled {
+  color: #7a7a7a;
+  border-color: #7a7a7a;
+  background-color: #b1b1b1;
 }
