--- a/src/button/button.module.css
+++ b/src/button/button.module.css
@@ -2,52 +2,76 @@
   cursor: pointer;
   display: inline-block;
   line-height: 1;
+  border-width: 1px;
   color: #333;
+  border-style: solid;
+  border-color: transparent;
 }
 /** variant: dark  */
-.dark {
+.button.dark {
   color: white;
   background-color: #000000;
 }
 /** variant: light  */
-.light {
-  color: white;
-  background-color: #464646;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+.button.light {
+  background-color: #ffffff;
+  border-color: #000000;
 }
-.light:disabled {
+.button.light:disabled {
   color: #aaaaaa;
   border-color: #aaaaaa;
   background-color: #e5e5e5;
 }
 /** variant: light  */
 .primary {
-  color: #e1e9ff;
-  background-color: #5f88f3;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+  color: #5f88f3;
+  background-color: #e1e9ff;
+  border-color: #5f88f3;
 }
+.primary:hover {
+  background-color: #bbcdff;
+}
+.primary:active {
+  color: #ffffff;
+  background-color: #5f88f3;
+}
+.primary.button:disabled {
+  color: #d0d0d0;
+  border-color: #d0d0d0;
+  background-color: #f5f5f5;
+}
+
 .ghost {
   color: inherit;
   background-color: inherit;
 }
 .small {
   font-size: 12px;
-  padding: 15px 25px;
+  padding: 8px;
 }
 .medium {
-  font-size: 14px;
-  padding: 11px 20px;
+  font-size: 22px;
+  padding: 15px 25px;
+}
+.thick {
+  padding: 25px 10px;
 }
 .large {
-  font-size: 16px;
-  padding: 12px 24px;
+  font-size: 24px;
+  padding: 15px 60px;
 }
 
 .button.rounded-small {
+  border-radius: 4px;
+}
+.button.rounded-medium {
   border-radius: 10px;
 }
+.button.rounded-large {
+  border-radius: 20px;
+}
 
-.button:disabled {
+.button:disabled:not(.ghost) {
   color: #7a7a7a;
   border-color: #7a7a7a;
   background-color: #b1b1b1;
