--- a/src/header/header-button.module.css
+++ b/src/header/header-button.module.css
@@ -1,11 +1,11 @@
 .button {
   font-family: 'Noto Sans KR', sans-serif;
-  border-radius: 10px;
+  border-radius: 30px;
   background: lightgray;
   width: fit-content;
-  padding: 0.5rem;
+  padding: 0.5rem 15px;
   position: relative;
-  padding-right: 3rem;
+  padding-right: calc(2.5rem + 15px);
   overflow: hidden;
   cursor: pointer;
 }
@@ -20,13 +20,13 @@
   background-color: black;
   color: white;
   width: 100%;
-  padding: 0.5rem;
+  padding: 0.5rem 15px;
   transition: 1s ease;
-  clip-path: circle(0.8rem at calc(100% - 1.1rem) 50%);
+  clip-path: circle(0.8rem at calc(100% - 1.5rem) 50%);
 }
 
 .button:hover .icon {
-  clip-path: circle(150% at calc(100% - 1.1rem));
+  clip-path: circle(150% at calc(100% - 1.5rem));
 }
 
 .button:hover .icon .default_icon {
