--- a/src/list/list.module.css
+++ b/src/list/list.module.css
@@ -77,12 +77,8 @@
   flex-grow: 1;
 }
 
-.addButton {
-  background-color: #4a90e2;
-  color: white;
-  border: none;
-  padding: 16px;
-  font-size: 16px;
-  border-radius: 10px;
-  cursor: pointer;
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
