--- a/src/button/button.module.css
+++ b/src/button/button.module.css
@@ -1,11 +1,13 @@
 .button {
   cursor: pointer;
-  display: inline-block;
   line-height: 1;
   border-width: 1px;
   color: #333;
   border-style: solid;
   border-color: transparent;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 /** variant: dark  */
 .button.dark {
@@ -35,11 +37,6 @@
   color: #ffffff;
   background-color: #5f88f3;
 }
-.primary.button:disabled {
-  color: #d0d0d0;
-  border-color: #d0d0d0;
-  background-color: #f5f5f5;
-}
 
 .ghost {
   color: inherit;
@@ -60,7 +57,6 @@
   font-size: 24px;
   padding: 15px 60px;
 }
-
 .button.rounded-small {
   border-radius: 4px;
 }
@@ -75,4 +71,16 @@
   color: #7a7a7a;
   border-color: #7a7a7a;
   background-color: #b1b1b1;
+}
+.primary.button:disabled {
+  color: #d0d0d0;
+  border-color: #d0d0d0;
+  background-color: #f5f5f5;
+}
+
+.search {
+  justify-content: flex-start;
+  display: inline-flex;
+  align-items: center;
+  color: #bbbbbb;
 }
