--- a/src/card/card.module.css
+++ b/src/card/card.module.css
@@ -3,18 +3,30 @@
   height: 20rem;
   position: relative;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #e2e2e2;
   border-radius: 1rem;
   margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.card .thumbnail-wrapper {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  position: absolute;
+  top: -60px;
+  background: linear-gradient(to bottom, #7fb2ff, #ffd953);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card .thumbnail {
-  width: 7.5rem;
-  height: 7.5rem;
+  width: 116px;
+  height: 116px;
+  border: 3px solid #ffffff;
   border-radius: 50%;
   overflow: hidden;
-  position: absolute;
-  top: -60px;
 }
 
 .card .interact {
