--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -10,7 +10,7 @@ html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
-  --header-height: 84.5px;
+  --header-height: 7.25rem;
 }
 
 /* 기본 여백을 제거하여 작성된 CSS를 더 잘 제어할 수 있습니다. */
