--- a/src/button/button.module.css
+++ b/src/button/button.module.css
@@ -57,29 +57,33 @@
   background-color: inherit;
 }
 .small {
-  font-size: 12px;
-  padding: 8px;
+  font-size: 1rem;
+  padding: 0.5rem;
 }
 .medium {
-  font-size: 22px;
-  padding: 15px 25px;
+  font-size: 1.375rem;
+  padding: 0.9375rem 25px;
 }
 .thick {
-  padding: 25px 10px;
-  width: 120px;
+  padding: 1.5625rem 0.625rem;
+  width: 7.5rem;
+  font-size: 1.375rem;
 }
 .large {
-  font-size: 24px;
-  padding: 15px 60px;
+  font-size: 1.5rem;
+  padding: 0.9375rem 3.75rem;
 }
 .button.rounded-small {
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 .button.rounded-medium {
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 .button.rounded-large {
-  border-radius: 20px;
+  border-radius: 1.25rem;
+}
+.button.rounded-full {
+  border-radius: 50%;
 }
 
 .button:disabled:not(.ghost) {
