--- a/src/checkbox/checkbox.module.css
+++ b/src/checkbox/checkbox.module.css
@@ -1,13 +1,22 @@
 .checkbox {
   background-color: #257cff;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
+  width: 1.75rem;
+  height: 1.75rem;
+  border-radius: 0.3125rem;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
 }
+.rounded {
+  width: 2.1375rem;
+  height: 2.1375rem;
+  border-radius: 50%;
+}
 .checkbox[data-state='unchecked'] {
   background-color: #d5d5d5;
+}
+
+.checkbox[data-state='unchecked'] .icon {
+  display: none;
 }
