--- a/src/header/header.module.css
+++ b/src/header/header.module.css
@@ -1,6 +1,6 @@
 .header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0 20px;
+  padding: 0 60px;
   background-color: white;
   position: fixed;
   top: 0;
@@ -39,12 +39,13 @@
   align-items: center;
   gap: 1rem;
   height: 100%;
+  font-size: 1.25rem;
 }
 
 .header .link-wrapper {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 3.25rem;
   list-style: none;
   height: 100%;
 }
@@ -71,4 +72,38 @@
 .header .welcome {
   font-size: 14px;
   margin-right: 10px;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  gap: 1rem;
+  transition:
+    background-color 200ms ease-in-out,
+    color 200ms ease-in-out;
+}
+
+.search-icon {
+  width: 44px;
+  height: 44px;
+  background-color: #d9d9d9;
+}
+
+.search-icon:hover {
+  background-color: black;
+  color: white;
+}
+
+.user-icon {
+  width: 56px;
+  height: 56px;
+  background-color: #d9d9d9;
+  color: white;
+}
+
+.user-icon:hover {
+  background-color: #969696;
+  color: #c1c1c1;
 }
