--- a/src/alert/alert.module.css
+++ b/src/alert/alert.module.css
@@ -35,7 +35,8 @@
   border-radius: 8px;
   padding: 24px;
   width: 90%;
-  max-width: 400px;
+  max-width: 630px;
+  min-height: 230px;
   text-align: center;
 }
 
@@ -49,13 +50,15 @@
   height: 600px;
 }
 .title {
-  font-size: 24px;
+  font-size: 2rem;
   font-weight: bold;
   margin-bottom: 16px;
 }
 
 .message {
-  font-size: 16px;
+  font-family: inherit;
+  font-size: 1.25rem;
+  font-weight: normal;
   line-height: 1.5;
   margin-bottom: 24px;
 }
