--- a/src/card/card.module.css
+++ b/src/card/card.module.css
@@ -1,21 +1,26 @@
 .card {
   width: 33.75rem;
-  height: 20rem;
   position: relative;
   padding: 2.1875rem;
-  background-color: #e2e2e2;
+  background-color: #f0f0f0;
   border-radius: 1rem;
   margin-bottom: 3rem;
   display: flex;
   flex-direction: column;
+  gap: 1.25rem;
+  transition: background-color 200ms ease-in-out;
 }
+.card:hover {
+  background-color: #ffe359;
+}
+
 .thumbnail-wrapper {
   width: 130px;
   height: 130px;
   border-radius: 50%;
   position: absolute;
   top: -60px;
-  background: linear-gradient(to bottom, #7fb2ff, #ffd953);
+  background: linear-gradient(to bottom, #ffd953, #7fb2ff);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,6 +48,12 @@
   overflow: hidden;
   -webkit-line-clamp: 3;
   line-clamp: 3;
+}
+
+.member-wrapper {
+  display: flex;
+  gap: 0.5rem 0.25rem;
+  flex-wrap: wrap;
 }
 
 .interact {
