--- a/src/input/input.module.css
+++ b/src/input/input.module.css
@@ -56,6 +56,9 @@
   width: 28px;
   height: 28px;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrapper .current-text.empty {
